--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="col-4 d-flex justify-content-center" id="card">
                 <h5>Denmark</h5>
                 <h1>Vipp Loft</h1>
-                <img src="https://www.flaticon.com/svg/vstatic/svg/4150/4150355.svg?token=exp=1612258912~hmac=2c087962cd5152bc163bed0d49af55b2" alt="" id="card-image">
+                <img src="hotel.svg" alt="" id="card-image">
                 <button>View Room</button>
             </div>
             <div class="col-4 d-flex justify-content-center bg-dark" id="blackCard">
@@ -94,7 +94,7 @@
             <div class="col-4 d-flex justify-content-center" id="card">
                 <h5>Denmark</h5>
                 <h1>Vipp Chimney</h1>
-                <img src="https://www.flaticon.com/svg/vstatic/svg/489/489870.svg?token=exp=1612260195~hmac=6fdc8508f2676bc7801450235ff8f10a" alt="" id="card-image">
+                <img src="review.svg" alt="" id="card-image">
                 <button>View Room</button>
             </div>
         </div>
