--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="col-4 d-flex justify-content-center bg-dark" id="blackCard">
                 <h5>Sweden</h5>
                 <h1>Vipp Shelter</h1>
-                <img src="https://www.flaticon.com/svg/vstatic/svg/3721/3721715.svg?token=exp=1612260164~hmac=3f79feccd4a8fc1ce8e3d6081bdc8b2d" alt="" id="card-image">
+                <img src="hotel-manager-child-apps-hotel-illustration-png-favpng-tXpVywn9xAtLNNY3iMYS745tw-removebg-preview.png" alt="" id="card-image">
                 <button>View Room</button>
             </div>
             <div class="col-4 d-flex justify-content-center" id="card">
